--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "A JQuery plugin for creating tag input fields.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "open-cli ./test/testingground.html"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "qunit": "^2.9.3",
     "typeahead.js": "^0.11.1"
+  },
+  "devDependencies": {
+    "open-cli": "^5.0.0",
+    "qunit": "^2.9.3"
   }
 }
