--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "jq-tag-input",
   "version": "1.0.0",
   "description": "A JQuery plugin for creating tag input fields.",
-  "main": "index.js",
+  "main": "jq-tag-input.js",
   "scripts": {
+    "build": "sass jq-tag-input.scss jq-tag-input.css && minify jq-tag-input.js > dist/jq-tag-input.min.js && minify jq-tag-input.css > dist/jq-tag-input.min.css && cpx {package.json,readme.md} dist",
     "test": "open-cli ./test/testingground.html"
   },
-  "author": "",
+  "author": "Tom Machado",
   "license": "ISC",
   "dependencies": {
     "typeahead.js": "^0.11.1"
   },
   "devDependencies": {
+    "cpx": "^1.5.0",
+    "minify": "^4.1.3",
     "open-cli": "^5.0.0",
-    "qunit": "^2.9.3"
+    "qunit": "^2.9.3",
+    "sass": "^1.23.1"
   }
 }
