--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tom Machado",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.4.1",
     "typeahead.js": "^0.11.1"
   },
   "devDependencies": {
